QuizBuilder-master/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-builder
  labels:
    app.kubernetes.io/name: quiz-builder
    app.kubernetes.io/component: namespace
